# sourcepackage

./: CMakeLists.txt  CODE_OF_CONDUCT.md  README.md  cluserver.pro  fswclient.c  protocol.txt  sp
client/: CMakeLists.txt
client/src/: basefunctions.h  fswclient.c  fswclient.cpp
daemon/: CMakeLists.txt
daemon/include/: Sock.hpp  basefunctions.h  config.hpp  main.hpp  package.hpp  util.hpp
daemon/src/: CMakeLists.txt  EventManager.cpp  EventManager.hpp  Logger.cpp  Logger.hpp  Sock.cpp  Sock.hpp  basefunctions.cpp  call_table.cpp  call_table.hpp  commands.cpp  config.hpp  getopts.h  main.cpp  main.hpp  package.cpp  package.hpp  pkgutil.cpp  pkgutil.hpp  signal.cpp  util.cpp  util.hpp
daemon/tests/: CMakeLists.txt  main.cpp
libsp/: CMakeLists.txt
libsp/include/: libsp.h  libsp.hpp  libsp_callmap.hpp  module.hpp  sp_module_api.hpp
libsp/src/: main.c
samples/config/: daemon.cfg
samples/module/: CMakeLists.txt  module.cpp
samples/module/src/: module.cpp
sourcepackageinteractive/: CMakeLists.txt
sourcepackageinteractive/src/: basefunctions.cpp  basefunctions.h  colors.hpp  fswclient.cpp
src/: Sock.cpp  Sock.hpp  config.hpp  main.cpp  main.hpp  package.cpp  pkgutil.cpp
