cmake_minimum_required(VERSION 3.1)

project(sp_daemon)
#add_executable(${PROJECT_NAME} "src/main.cpp" "src/boost-server.cpp" "src/utils.cpp" "src/basecmds.cpp" "src/testcmds.cpp" "src/basefuncions.cpp" "src/service.cpp" "src/tcpclient.cpp" "src/memcached.cpp")
set( SOURCE_ROOT ./src )
set (CMAKE_CXX_STANDARD 11)
aux_source_directory( ${SOURCE_ROOT} SOURCES )
add_executable(${PROJECT_NAME} ${SOURCES})
#include_directories(SOURCE_ROOT ./src)
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -static -Wall -O2")
#set(Boost_USE_STATIC_LIBS OFF)
#set(Boost_USE_MULTITHREADED ON)
#find_package(Boost COMPONENTS system filesystem REQUIRED)
#include_directories(${Boost_INCLUDE_DIRS})
target_link_libraries(${PROJECT_NAME} -pthread)
